--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Bunny Jump</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="javascript.svg" type="image/x-icon" />
+    <title>Bunny Jump Game</title>
   </head>
   <body>
-    <canvas id="game"></canvas>
-    <script type="module" src="/src/main.js"></script>
+    <div id="app"></div>
+    <script src="/src/main.js" type="module"></script>
   </body>
 </html>
